# cpp09

.github/workflows/: ci.yml
ex00/: CMakeLists.txt
ex00/src/: BitcoinExchange.cpp  BitcoinExchange.hpp  main.cpp
ex00/tests/: test_btc.cpp
